tests/errors/test-function-variable-no-init.script

int(int) func;;

//>2:10: error C16: variables of function-type must be initialized
